# LynxLog

./: .gitignore  CMakeLists.txt
include/: linxlog.h
src/: linxlog.c  main.c
